##
## Neurospaces: a library which implements a global typed symbol table to
## be used in neurobiological model maintenance and simulation.
##
## $Id: Makefile.am 1.10 Wed, 06 Jun 2007 10:26:02 -0500 hugo $
##

##############################################################################
##'
##' Neurospaces : testbed C implementation that integrates with genesis
##'
##' Copyright (C) 1999-2008 Hugo Cornelis
##'
##' functional ideas ..	Hugo Cornelis, hugo.cornelis@gmail.com
##'
##' coding ............	Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

SUBDIRS = 

#CC = g++
LFLAGS=-l

bin_PROGRAMS = des2xml des2xml_comment

dist_bin_SCRIPTS = 2vcg contours2ndf des2xml.pl morphology2ndf morphology2ndf.ptkdb xml2des.xsl xml2html.xsl

des2xml_SOURCES = des2xml.c

des2xml_comment_SOURCES = des2xml_comment.l

