dnl
dnl Neurospaces: a library which implements a global typed symbol table to
dnl be used in neurobiological model maintenance and simulation.
dnl
dnl $Id: configure.in 1.12 Mon, 11 Jun 2007 12:53:18 -0500 hugo $
dnl

dnl //////////////////////////////////////////////////////////////////////////
dnl
dnl Neurospaces : testbed C implementation that integrates with genesis
dnl
dnl Copyright (C) 1999-2008 Hugo Cornelis
dnl
dnl functional ideas ..	Hugo Cornelis, hugo.cornelis@gmail.com
dnl
dnl coding ............	Hugo Cornelis, hugo.cornelis@gmail.com
dnl
dnl //////////////////////////////////////////////////////////////////////////

dnl Process this file with autoconf to produce a configure script.
AC_INIT(serialsegment.c)

AM_CONFIG_HEADER(config.h)

# $Format: "AM_INIT_AUTOMAKE(neurospaces/algorithms/event, ${label}, ${email})"$
AM_INIT_AUTOMAKE(neurospaces/algorithms/event, network-7, hugo.cornelis@gmail.com)

# determine linker flags for perl embedding

PERL_CCOPTS=`perl -MExtUtils::Embed -e ccopts`
AC_SUBST(PERL_CCOPTS)

PERL_LDADD=`perl -MExtUtils::Embed -e ldopts`
AC_SUBST(PERL_LDADD)

PERL_LDFLAGS=`perl -MExtUtils::Embed -e ldopts`
AC_SUBST(PERL_LDFLAGS)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

dnl Checks for libraries.


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strtod)

AC_OUTPUT(Makefile)
